--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "islandwaystours",
+  "name": "eternaltours",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,10 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@paypal/react-paypal-js": "^8.7.0",
-    "next": "14.2.9",
+    "axios": "^1.7.7",
+    "multer": "^1.4.5-lts.1",
+    "next": "^14.2.14",
+    "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
