--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.4.1",
     "@paypal/react-paypal-js": "^8.7.0",
     "axios": "^1.7.7",
+    "formidable": "^3.5.1",
     "multer": "^1.4.5-lts.1",
     "next": "^14.2.14",
     "next-connect": "^1.0.0",
