--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@paypal/react-paypal-js": "^8.7.0",
     "axios": "^1.7.7",
     "firebase": "^10.14.1",
+    "firebase-admin": "^12.6.0",
     "formidable": "^3.5.1",
     "multer": "^1.4.5-lts.1",
     "next": "^14.2.14",
