--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@headlessui/react": "^2.1.10",
     "@paypal/react-paypal-js": "^8.7.0",
     "axios": "^1.7.7",
     "firebase": "^10.14.1",
