--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^12.4.0",
     "firebase-admin": "^12.6.0",
     "formidable": "^3.5.1",
+    "jose": "^6.1.0",
     "multer": "^1.4.5-lts.1",
     "next": "^14.2.14",
     "next-connect": "^1.0.0",
